--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/suhailgupta03/issue-test/issues"
   },
-  "homepage": "https://github.com/suhailgupta03/issue-test#readme"
+  "homepage": "https://github.com/suhailgupta03/issue-test#readme",
+  "dependencies": {
+    "axios": "^1.3.4",
+    "react": "^18.2.0"
+  }
 }
